referecnecs cleaned up

--- a/biblio_pseudo_alex.bib
+++ b/biblio_pseudo_alex.bib
@@ -2,7 +2,7 @@
 @article{huzinaga_1994_1995,
   volume = {73},
   number = {5},
-  journal = {Canadian Journal of Chemistry},
+  journal = {Can. J. Chem.},
   author = {Huzinaga, Sigeru},
   title = {1994 Polanyi Award Lecture Concept of active electrons in chemistry},
   year = {1995},
@@ -13,7 +13,7 @@
   volume = {112},
   shorttitle = {Relativistic {{Pseudopotentials}}},
   number = {1},
-  journal = {Chemical Reviews},
+  journal = {Chem. Rev.},
   author = {Dolg, Michael and Cao, Xiaoyan},
   title = {Relativistic Pseudopotentials: Their Development and scope of Applications},
   year = {2012},
@@ -24,7 +24,7 @@
 @article{drujon_pseudopotentials_2013,
   volume = {34},
   number = {1},
-  journal = {Journal of Computational Chemistry},
+  journal = {J. Comput. Chem.},
   author = {Drujon, J. and Carissan, Y.},
   title = {Pseudopotentials for hybridized carbon atoms},
   year = {2013},
@@ -34,7 +34,7 @@
 @article{wesolowski_frozen-density_2015,
   volume = {115},
   number = {12},
-  journal = {Chemical Reviews},
+  journal = {Chem. Rev.},
   author = {Wesolowski, Tomasz A. and Shedge, Sapana and Zhou, Xiuwen},
   title = {Frozen-density embedding strategy for multilevel simulations of electronic structure},
   year = {2015},
@@ -44,7 +44,7 @@
 @article{chung_oniom_2015,
   volume = {115},
   number = {12},
-  journal = {Chemical Reviews},
+  journal = {Chem. Rev.},
   author = {Chung, Lung Wa and Sameera, W. M. C. and Ramozzi, Romain and Page, Alister J. and Hatanaka, Miho and Petrova, Galina P. and Harris, Travis V. and Li, Xin and Ke, Zhuofeng and Liu, Fengyi and Li, Hai-Bei and Ding, Lina and Morokuma, Keiji},
   title = {The ONIOM method and its applications},
   year = {2015},
@@ -65,7 +65,7 @@
 @article{dyall_formal_2001,
   volume = {41},
   number = {1},
-  journal = {Journal of Chemical Information and Computer Sciences},
+  journal = {J. Chem. Inform. Comput. Sci.},
   author = {Dyall, Kenneth G.},
   title = {Formal analysis of effective core potential methods},
   year = {2001},
@@ -74,7 +74,7 @@
 
 @article{huzinaga_effective_1991,
   volume = {234},
-  journal = {Journal of Molecular Structure: THEOCHEM},
+  journal = {J. Mol. Struct. THEOCHEM},
   author = {Huzinaga, S.},
   title = {Effective Hamiltonian method for molecules},
   year = {1991},
@@ -84,7 +84,7 @@
 @article{katsuki_molecular_1992,
   volume = {70},
   number = {2},
-  journal = {Canadian Journal of Chemistry},
+  journal = {Can. J. Chem.},
   author = {Katsuki, S., Shinichi},
   title = {Molecular orbital calculation using spectral representation technique},
   year = {1992},
@@ -95,7 +95,7 @@
   volume = {14},
   language = {en},
   number = {5},
-  journal = {International Journal of Quantum Chemistry},
+  journal = {Int. J. Quantum Chem.},
   author = {H{\"o}ujer, Germund and Chung, Johnson},
   title = {Some aspects of the model potential method},
   year = {1978},
@@ -106,7 +106,7 @@
   volume = {106},
   language = {en},
   number = {3},
-  journal = {International Journal of Quantum Chemistry},
+  journal = {Inte. J. Quantum Chem.},
   author = {Carissan, Yannick and Bessac, Fabienne and Alary, Fabienne and Heully, Jean-Louis and Poteau, Romuald},
   title = {What can we do with an effective group potential?},
   year = {2006},
@@ -125,6 +125,7 @@
 @book{me_structure_theory,
    title = "Molecular Electronic-Structure Theory",
    publisher = {{John Wiley and Sons Ltd}},
+   address = {Baffins Lane, Chichester, West Sussex PO19 1UD, England},
    author = {Helgaker, Trygve and J{\o}rgensen, Poul and Olsen, Jeppe},
    year = {2002},
    groups = {biblio\_pseudo\_alex}
@@ -134,7 +135,7 @@
   volume = {105},
   language = {en},
   number = {9982},
-  journal = {Journal of Chemical Physics},
+  journal = {J. Chem. Phys.},
   author = {Perdew, J.P. and Ernzerhof, M. and Burke, K.},
   title = {Rationale for mixing exact exchange with density functional approximations},
   year = {1996},
@@ -145,7 +146,7 @@
   volume = {77},
   language = {en},
   number = {3865},
-  journal = {Physical Review letters},
+  journal = {Phys. Rev. Lett.},
   author = {Perdew, J.P. and Burke, K. and Ernzerhof, M.},
   title = {Generalized gradient approximation made simple},
   year = {1996},
@@ -156,9 +157,9 @@
   volume = {91},
   language = {en},
   number = {146401},
-  journal = {Physical Review letters},
+  journal = {Phys. Rev. Lett.},
   author = {Tao, J. and Perdew, J.P. and Staroverov, V.N. and Scuseria, G.E},
-  title = {Climbing the density functional ladder: Nonempirical meta–generalized gradient approximation designed for molecules and solids},
+  title = {Climbing the density functional ladder: Nonempirical meta-generalized gradient approximation designed for molecules and solids},
   year = {2003},
   groups = {biblio\_pseudo\_alex}
 }
@@ -167,7 +168,7 @@
   volume = {119},
   language = {en},
   number = {12129},
-  journal = {Journal of Chemical Physics},
+  journal = {J. Chem. Phys.},
   author = {Staroverov, V.N. and Scuseria, G.E and Tao, J. and Perdew, J.P.},
   title = {Comparative assessment of a new nonempirical density functional: Molecules and hydrogen-bonded complexes},
   year = {2003},
@@ -177,7 +178,7 @@
 @article{tammdancoff,
  volume = {7},
  number = {3578},
- journal = {Journal of Chemical Theory and Computation},
+ journal = {J. Chem. Theory Comput.},
  author = {M. J. G. Peach and M. J. Williamson and D. J. Tozer},
  title = {Influence of Triplet Instabilities in TDDFT},
  year = {2011},
@@ -188,7 +189,7 @@
  volume = {1},
  language = {en},
  number = {36},
- journal = {Physical Review},
+ journal = {Phys. Rev.},
  author = {Slater, J. C.},
  title = {Atomic shielding constants},
  year = {1930},
@@ -207,7 +208,7 @@
 @article{defsvp,
  volume = {97},
  number = {2571},
- journal = {Journal of Chemical Physics},
+ journal = {J. Chem. Phys.},
  author = {Sch{\"a}fer, A. and Horn, H. and Ahlrichs, R.},
  title = {Fully optimized contracted Gaussian basis sets for atoms Li to Kr},
  year = {1992},
@@ -226,7 +227,7 @@
 @article{Nicolas1980a,
   volume = {72},
   number = {1},
-  journal = {The Journal of Chemical Physics},
+  journal = {J. Chem. Phys.},
   author = {Nicolas, G. and Durand, Ph},
   title = {A new general methodology for deriving effective Hamiltonians for atoms and molecules. Application to the transferability of atomic potentials in the hydrocarbon series},
   year = {1980},
@@ -237,9 +238,9 @@
   volume = {98},
   language = {en},
   number = {1},
-  journal = {The Journal of Chemical Physics},
+  journal = {J. Chem. Phys.},
   author = {Katsuki, S.},
-  title = {The spectral representation technique for an active‐electron‐only molecular orbital calculation applied to the case of nonspherical frozen charge},
+  title = {The spectral representation technique for an active-electron-only molecular orbital calculation applied to the case of nonspherical frozen charge},
   year = {1993},
   pages = {496--501}
 }
@@ -249,7 +250,7 @@
   shorttitle = {Multicentered Effective Group Potentials},
   language = {en},
   number = {3-4},
-  journal = {Theoretical Chemistry Accounts},
+  journal = {Theor. Chem. Acc.},
   author = {Raynaud, Christophe and {del Rosal}, Iker and Jolibois, Franck and Maron, Laurent and Poteau, Romuald},
   title = {Multicentered effective group potentials: ligand-field effects in organometallic clusters and dynamical study of chemical reactivity},
   year = {2010},
@@ -259,7 +260,7 @@
 @article{EGP5,
   volume = {113},
   number = {15},
-  journal = {Journal of chemical physics},
+  journal = {J. Chem. Phys.},
   author = {Hernandez, Norge Cruz and Sanz, Javier Fdez},
   title = {Ab initio group model potentials including electron correlation effects},
   year = {2000},
@@ -269,7 +270,7 @@
 @article{EGP6,
   volume = {99},
   number = {2},
-  journal = {Journal of chemical physics},
+  journal = {J. Chem. Phys.},
   author = {Romero, Jose Antonio Mejias and Sanz, Javier Fernandez},
   title = {Ab initio group model potentials: Application to the study of intermolecular interactions},
   year = {1993},
@@ -279,7 +280,7 @@
 @article{EGP9,
   volume = {102},
   number = {1},
-  journal = {Journal of chemical physics},
+  journal = {J. Chem. Phys.},
   author = {Mejias, J. A. and Sanz, Javier Fernandez},
   title = {Compact model potentials for ab initio embedded cluster calculations. Part I. Basic formulation},
   year = {1994},
@@ -290,7 +291,7 @@
   volume = {112},
   shorttitle = {Fragmentation {{Methods}}},
   number = {1},
-  journal = {Chemical Reviews},
+  journal = {Chem. Rev.},
   author = {Gordon, Mark S. and Fedorov, Dmitri G. and Pruitt, Spencer R. and Slipchenko, Lyudmila V.},
   title = {Fragmentation methods: a route to accurate calculations on large systems},
   year = {2012},
@@ -312,7 +313,7 @@
   volume = {105},
   shorttitle = {The {{Effective Fragment Potential Method}}},
   number = {2},
-  journal = {The Journal of Physical Chemistry A},
+  journal = {J. Phys. Chem. A},
   author = {Gordon, Mark S. and Freitag, Mark A. and Bandyopadhyay, Pradipta and Jensen, Jan H. and Kairys, Visvaldas and Stevens, Walter J.},
   title = {The effective fragment potential method: A QM-based MM approach to modeling environmental effects in chemistry},
   year = {2001},
@@ -321,7 +322,7 @@
 
 @article{ASSFELD1996100,
 title = "Quantum chemical computations on parts of large molecules: the ab initio local self consistent field method",
-journal = "Chemical Physics Letters",
+journal = {Chem. Phys. Lett.},
 volume = "263",
 number = "1",
 pages = "100 - 106",
