referecnecs cleaned up

--- a/main.tex
+++ b/main.tex
@@ -4,7 +4,8 @@
 %% The document class accepts keyval options, which should include
 %% the target journal and optionally the manuscript type.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\documentclass[journal=jctcce,manuscript=article]{achemso}
+\documentclass[journal=jctc,manuscript=article]{achemso}
+\setkeys{acs}{articletitle = true}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Place any additional packages needed here.  Only include packages
