--- a/main.tex
+++ b/main.tex
@@ -526,7 +526,7 @@ calculations), the ionisation energy (IE) and the energy of the HOMO orbital ($\
 \includegraphics[width=8cm]{pbe0_homo}
 \includegraphics[width=8cm]{pbe0_ionisation}
 \includegraphics[width=8cm]{pbe0_excitation}
-\caption{DFT and TD-DFT (PBE0) comparison of reference and pseudo-system energies across a range of chain alkenes and computational methods.}
+\caption{DFT (PBE0) comparison of reference and pseudo-system energies across a range of chain alkenes.}
 \label{fig:alkenes_hf_dft}
 \end{figure}
 \begin{figure}[h]
