--- a/main.tex
+++ b/main.tex
@@ -452,7 +452,8 @@ Next, we take some of these potentials to create a pseudo-ethene system, with th
 
 \begin{table}[ht]
 \caption{HOMO energies ($\pi$, eV) for ethene and pseudo-ethene. The pseudo-potentials used in the pseudo-ethene are taken from optimised values for 
-pseudo-CH\(^{\bullet}_{3}\) with only \(s\)-potentials and an exponent of 10.0.}
+pseudo-CH\(^{\bullet}_{3}\) with only \(s\)-potentials and an exponent of 10.0. $d$ (a.u.) as defined 
+in Figure~\ref{figure:ref_pseudo_diagram}.}
 \begin{tabular}{c c c c}
 \hline
 & $d$ & \(s\) coefficient & \( \pi \)  \\
