--- a/main.tex
+++ b/main.tex
@@ -310,7 +310,7 @@ Perspectives are presented in the conclusion.
 
 \section{Method}
 
-\subsection{Pseudopotential definition}
+\subsection{Pseudo-potential definition}
 
 As in our previous work\cite{drujon_pseudopotentials_2013},
 we take CH\(^{\bullet}_{3}\) as our starting system to be reproduced.
@@ -521,7 +521,7 @@ calculations), the ionisation energy (IE) and the energy of the HOMO orbital ($\
 \label{table:ethene_excitations}
 \end{table}
 
-\subsection{C\(\mathbf{_{2n}}\)H\(\mathbf{_{2n+2}}\), \(\mathbf{n=2-12}\)}
+\subsection{C\(\mathbf{_{2n}}\)H\(\mathbf{_{2n+2}}\), \(\mathbf{2 \leq n \leq 12}\)}
 
 \begin{figure}[h]
 \includegraphics[width=8cm]{short_pbe0_homo}
@@ -620,7 +620,7 @@ Mean TD-DFT Excitation error (\%) & - & 0.005 & - & - & - \\
 \end{table}
 
 Figure~\ref{fig:long_chain_graphs} and Table \ref{table:long_alkene_errors} refer to longer 
-alkene chains (n up to 100).
+alkene chains (\(n\) up to 100).
 The pattern of decreasing ionisation potentials and $\Delta_{ST}$ with increasing HOMO
 energy is still followed, with the absolute error remaining consistent.
 However, differences in the triplet-singlet energies between the reference and pseudo-systems 
