--- a/biblio_pseudo_alex.bib
+++ b/biblio_pseudo_alex.bib
@@ -106,7 +106,7 @@
   volume = {106},
   language = {en},
   number = {3},
-  journal = {Inte. J. Quantum Chem.},
+  journal = {Int. J. Quantum Chem.},
   author = {Carissan, Yannick and Bessac, Fabienne and Alary, Fabienne and Heully, Jean-Louis and Poteau, Romuald},
   title = {What can we do with an effective group potential?},
   year = {2006},
@@ -116,11 +116,12 @@
 
 @book{TURBOMOLE,
      title = {TURBOMOLE V7.1 2016},
+     year = 2016,
      publisher = {a development of University of Karlsruhe and 
          {Forschungszentrum Karlsruhe GmbH}, 1989-2007, 
          {TURBOMOLE GmbH}, since 2007; available from 
           http://www.turbomole.com.}
-} 
+}
 
 @book{me_structure_theory,
    title = "Molecular Electronic-Structure Theory",
@@ -198,7 +199,7 @@
 
 @misc{nyu_h_solutions,
  language = {en},
- url = {http://www.nyu.edu/classes/tuckerman/adv.chem/lectures/lecture_8/},
+ url = {http://www.nyu.edu/classes/tuckerman/adv.chem/lectures/lecture\_8/},
  author = {Mark E. Tuckerman},
  title = {CHEM-UA 127: Advanced General Chemistry I},
  year = {2011},
@@ -329,6 +330,5 @@ pages = "100 - 106",
 year = "1996",
 issn = "0009-2614",
 doi = "https://doi.org/10.1016/S0009-2614(96)01165-7",
-url = "http://www.sciencedirect.com/science/article/pii/S0009261496011657",
 author = "Xavier Assfeld and Jean-Louis Rivail"
 }
